Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.11, 11.4, 11.8
-
Not for ES Release Notes
-
Q2/2026 Server Maintenance
Description
CREATE VIEW v AS select * from (select 'foo' AS a) sq; |
CREATE PROCEDURE p() ALTER TABLE v TRUNCATE PARTITION p; |
--error ER_PARTITION_MGMT_ON_NONPARTITIONED
|
CALL p;
|
--error ER_PARTITION_MGMT_ON_NONPARTITIONED
|
CALL p;
|
|
|
DROP PROCEDURE p; |
DROP VIEW v; |
|
10.11 b29d3779e42f1cf65b1bbe84876767122dcc76c8 |
mariadbd: /data/bld/10.11-asan-ubsan/sql/mdl.cc:864: MDL_lock* MDL_map::find_or_insert(LF_PINS*, const MDL_key*): Assertion `mdl_key->length() == 3' failed.
|
260209 23:35:45 [ERROR] /share8t/bld/10.11-asan-ubsan/sql/mariadbd got signal 6 ;
|
|
|
#8 0x00007f77e1c45395 in __assert_fail_base (fmt=0x7f77e1db9a90 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x56133ba3aa60 "mdl_key->length() == 3", file=file@entry=0x56133ba39860 "/data/bld/release/bb-12.2-release-asan/sql/mdl.cc", line=line@entry=1577, function=function@entry=0x56133ba3aaa0 "tal_status MDL_map::try_acquire_lock(LF_PINS*, MDL_key*, MDL_ticket*, bool)") at ./assert/assert.c:92
|
#9 0x00007f77e1c53eb2 in __GI___assert_fail (assertion=0x56133ba3aa60 "mdl_key->length() == 3", file=0x56133ba39860 "/data/bld/release/bb-12.2-release-asan/sql/mdl.cc", line=1577, function=0x56133ba3aaa0 "tal_status MDL_map::try_acquire_lock(LF_PINS*, MDL_key*, MDL_ticket*, bool)") at ./assert/assert.c:101
|
#10 0x0000561339843d28 in MDL_map::try_acquire_lock (this=0x56133e202300 <mdl_locks>, pins=0x62c0000402b8, mdl_key=0x625000270018, ticket=0x6080000172a0, wait=true) at /data/bld/release/bb-12.2-release-asan/sql/mdl.cc:1577
|
#11 0x0000561339847855 in MDL_context::try_acquire_lock_impl (this=0x62c0000c0438, mdl_request=0x62500026fff8, out_ticket=0x7f77d68ad610) at /data/bld/release/bb-12.2-release-asan/sql/mdl.cc:2741
|
#12 0x000056133984870e in MDL_context::acquire_lock (this=0x62c0000c0438, mdl_request=0x62500026fff8, lock_wait_timeout=86400) at /data/bld/release/bb-12.2-release-asan/sql/mdl.cc:2895
|
#13 0x000056133984a0d3 in MDL_context::acquire_locks (this=0x62c0000c0438, mdl_requests=0x7f77d68ad900, lock_wait_timeout=86400) at /data/bld/release/bb-12.2-release-asan/sql/mdl.cc:3132
|
#14 0x00005613391495b7 in lock_table_names (thd=0x62c0000c0218, options=..., tables_start=0x62500025b9d8, tables_end=0x0, lock_wait_timeout=86400, flags=0) at /data/bld/release/bb-12.2-release-asan/sql/sql_base.cc:4501
|
#15 0x000056133914a15f in open_tables (thd=0x62c0000c0218, options=..., start=0x7f77d68aded0, counter=0x7f77d68adec0, flags=0, prelocking_strategy=0x7f77d68addc0) at /data/bld/release/bb-12.2-release-asan/sql/sql_base.cc:4714
|
#16 0x00005613391184dc in open_tables (thd=0x62c0000c0218, tables=0x7f77d68aded0, counter=0x7f77d68adec0, flags=0) at /data/bld/release/bb-12.2-release-asan/sql/sql_base.h:507
|
#17 0x0000561339827e04 in Sql_cmd_alter_table_truncate_partition::execute (this=0x62500025c158, thd=0x62c0000c0218) at /data/bld/release/bb-12.2-release-asan/sql/sql_partition_admin.cc:888
|
#18 0x00005613393317e3 in mysql_execute_command (thd=0x62c0000c0218, is_called_from_prepared_stmt=false) at /data/bld/release/bb-12.2-release-asan/sql/sql_parse.cc:5893
|
#19 0x0000561339a36f6d in sp_instr_stmt::exec_core (this=0x62500025c1b0, thd=0x62c0000c0218, nextp=0x7f77d68af500) at /data/bld/release/bb-12.2-release-asan/sql/sp_instr.cc:1268
|
#20 0x0000561339a322e0 in sp_lex_keeper::reset_lex_and_exec_core (this=0x62500025c1f0, thd=0x62c0000c0218, nextp=0x7f77d68af500, open_tables=false, instr=0x62500025c1b0, rerun_the_same_instr=false) at /data/bld/release/bb-12.2-release-asan/sql/sp_instr.cc:418
|
#21 0x0000561339a33550 in sp_lex_keeper::validate_lex_and_exec_core (this=0x62500025c1f0, thd=0x62c0000c0218, nextp=0x7f77d68af500, open_tables=false, instr=0x62500025c1b0) at /data/bld/release/bb-12.2-release-asan/sql/sp_instr.cc:597
|
#22 0x0000561339a366e3 in sp_instr_stmt::execute (this=0x62500025c1b0, thd=0x62c0000c0218, nextp=0x7f77d68af500) at /data/bld/release/bb-12.2-release-asan/sql/sp_instr.cc:1170
|
#23 0x0000561339078ba3 in sp_head::execute (this=0x62500025a998, thd=0x62c0000c0218, merge_da_on_success=true) at /data/bld/release/bb-12.2-release-asan/sql/sp_head.cc:1294
|
#24 0x000056133907f1cb in sp_head::execute_procedure (this=0x62500025a998, thd=0x62c0000c0218, args=0x62c0000c57e8) at /data/bld/release/bb-12.2-release-asan/sql/sp_head.cc:2331
|
#25 0x000056133931c9dd in do_execute_sp (thd=0x62c0000c0218, sp=0x62500025a998) at /data/bld/release/bb-12.2-release-asan/sql/sql_parse.cc:3072
|
#26 0x000056133931e864 in Sql_cmd_call::execute (this=0x62d0000f0500, thd=0x62c0000c0218) at /data/bld/release/bb-12.2-release-asan/sql/sql_parse.cc:3313
|
#27 0x00005613393317e3 in mysql_execute_command (thd=0x62c0000c0218, is_called_from_prepared_stmt=false) at /data/bld/release/bb-12.2-release-asan/sql/sql_parse.cc:5893
|
#28 0x000056133933eacf in mysql_parse (thd=0x62c0000c0218, rawbuf=0x62d0000f0438 "CALL p", length=6, parser_state=0x7f77d68b1a20) at /data/bld/release/bb-12.2-release-asan/sql/sql_parse.cc:7925
|
#29 0x0000561339315645 in dispatch_command (command=COM_QUERY, thd=0x62c0000c0218, packet=0x6290002a3219 "CALL p", packet_length=6, blocking=true) at /data/bld/release/bb-12.2-release-asan/sql/sql_parse.cc:1896
|
#30 0x0000561339312346 in do_command (thd=0x62c0000c0218, blocking=true) at /data/bld/release/bb-12.2-release-asan/sql/sql_parse.cc:1432
|
#31 0x000056133981e69d in do_handle_one_connection (connect=0x6080000081b8, put_in_cache=true) at /data/bld/release/bb-12.2-release-asan/sql/sql_connect.cc:1503
|
#32 0x000056133981e1fc in handle_one_connection (arg=0x608000008138) at /data/bld/release/bb-12.2-release-asan/sql/sql_connect.cc:1415
|
#33 0x000056133a5a89cc in pfs_spawn_thread (arg=0x617000005f18) at /data/bld/release/bb-12.2-release-asan/storage/perfschema/pfs.cc:2198
|
#34 0x00007f77e1ca81c4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
|
#35 0x00007f77e1d2885c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
|
No obvious immediate problem on a non-debug build.
The failure started happening after this commit in 10.11.16:
commit 6fcd87ba4d37560fe63e2901315ed2983723ccb6
|
Author: Aleksey Midenkov
|
Date: Sat Dec 20 19:56:08 2025 +0300
|
|
|
MDEV-33985 Server crashes at Item_func_nextval::val_int
|
Attachments
Issue Links
- is caused by
-
MDEV-33985 Server crashes at Item_func_nextval::val_int
-
- Closed
-
- relates to
-
MDEV-39184 Rework MDL enum constants values
-
- Closed
-