sql/sql_view.cc
@@ -1681,8 +1681,12 @@ bool mysql_make_view(THD *thd, TABLE_SHARE *share, TABLE_LIST *table,
         /* We have to keep the lock type for sequence tables */
         if (!tbl->sequence)
 	  tbl->lock_type= table->lock_type;
-        tbl->mdl_request.set_type(table->mdl_request.type);
-        tbl->updating= table->updating;
+        /* VIEWs with derived are non-writable */
+        if (!tbl->is_pure_alias())
+        {
+          tbl->mdl_request.set_type(table->mdl_request.type);
+          tbl->updating= table->updating;
+        }
       }
       /*
         If the view is mergeable, we might want to
